<resources>
    <string name="app_name">social5</string>
    <string name="bangtin">Bảng tin</string>
    <string name="img">Trang cá nhân</string>
    <string name="setting">Người dùng</string>
    <string name="notification">Thông báo</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="third_fragment_label">Third Fragment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>