<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/SecondFragment">

    <fragment
        android:id="@+id/FirstFragment"
        android:name="com.example.social5.Fragment.NewsfeedFragment"
        android:label="@string/first_fragment_label"
        tools:layout="@layout/fragment_newsfeed">

        <action
            android:id="@+id/action_FirstFragment_to_SecondFragment"
            app:destination="@id/SecondFragment" />

    </fragment>
    <fragment
        android:id="@+id/SecondFragment"
        android:name="com.example.social5.Fragment.ProfileFragment"
        android:label="@string/second_fragment_label"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment" />
    </fragment>

    <fragment
        android:id="@+id/ThirdFragment"
        android:name="com.example.social5.Fragment.UsersFragment"
        android:label="@string/third_fragment_label"
        tools:layout="@layout/fragment_profile">

        <action
            android:id="@+id/action_SecondFragment_to_FirstFragment"
            app:destination="@id/FirstFragment"
            />
    </fragment>
</navigation>